fixed text overflow on subs

--- a/src/App.scss
+++ b/src/App.scss
@@ -262,9 +262,11 @@
 
 	#subs{
 		transform: translate(7%,11%);
-		width:120px;
-		min-width: 74%;
-		height:138px;
+		width:fit-content;
+		max-width: 74%;
+		padding-right:5px ;
+		height:fit-content;
+		padding-bottom: 16px;
 		background-color:rgb(22, 24, 28) ;
 		color:rgb(255, 255, 255);
 		font-family: TwitterChirp, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;		
@@ -274,12 +276,12 @@
 		border-radius: 24px;
 		#subs1{
 			font-weight: 700;
-			font-size: 1.3rem;
+			font-size: 20px;
 			padding-top: 5px;
 			transform:translate(5%,10%);
 		}
 		#subs2{
-            font-size: 0.9rem;
+            font-size: 14px;
 			text-wrap: wrap;
             transform:translate(5%,10%);
         }
@@ -293,7 +295,7 @@
 			width:fit-content;
 			font-family: TwitterChirp, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;		
 			font-weight: 500;
-			font-size:1.1rem;
+			font-size:18px;
 			border-radius: 30px;
 			transition:0.4s ;
 	
